[wip] Iliev7 -- Added Rhyme to list of simulations

--- a/tests/Iliev-7/Iliev-7.ipynb
+++ b/tests/Iliev-7/Iliev-7.ipynb
@@ -6,10 +6,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from pyrhyme import PyRhyme\n",
+    "\n",
     "from pathlib import Path\n",
     "\n",
     "# !pip install numpy\n",
     "import numpy as np\n",
+    "\n",
+    "# !pip install astropy\n",
+    "from astropy import units as U\n",
+    "from astropy import constants as C\n",
+    "from astropy.cosmology import WMAP7\n",
     "\n",
     "# !pip install scipy\n",
     "from scipy.io import FortranFile\n",
@@ -31,10 +38,11 @@
    "source": [
     "# run wget http://musewiki.aip.de/local--files/dastools:sourcedet/CubEx-1.8_20180904.tar.gz --no-check-certificate\n",
     "\n",
+    "RHYME_OUTPUT_DIR = './output.old'\n",
     "ILIEV_7_DIR = 'astronomy.sussex.ac.uk/~iti20/RT_comparison_project/RT_workshop_data/T7_results'\n",
     "\n",
     "BINARIES = {\n",
-    "    'C2Ray': {\n",
+    "    'CAPREOLE+C2-RAY': {\n",
     "        'orig': {\n",
     "            1: {'path': f'{ILIEV_7_DIR}/Mellema1.bin', },\n",
     "            3: {'path': f'{ILIEV_7_DIR}/Mellema2.bin', },\n",
@@ -50,7 +58,7 @@
     "            75: {'path': f'{ILIEV_7_DIR}/Mellema_add5.bin', },\n",
     "        },\n",
     "    },\n",
-    "    'Coral': {\n",
+    "    'CORAL': {\n",
     "        'orig': {\n",
     "            1: {'path': f'{ILIEV_7_DIR}/coral1.bin', },\n",
     "            3: {'path': f'{ILIEV_7_DIR}/coral2.bin', },\n",
@@ -66,7 +74,7 @@
     "            75: {'path': f'{ILIEV_7_DIR}/coral_add5.bin', },\n",
     "        },\n",
     "    },\n",
-    "    'Flash': {\n",
+    "    'FLASH-HC': {\n",
     "        'orig': {\n",
     "            1: {'path': f'{ILIEV_7_DIR}/flash1.bin', },\n",
     "            3: {'path': f'{ILIEV_7_DIR}/flash2.bin', },\n",
@@ -82,7 +90,7 @@
     "            75: {'path': f'{ILIEV_7_DIR}/flash_add5.bin', },\n",
     "        },\n",
     "    },\n",
-    "    'Licorice': {\n",
+    "    'LICORICE': {\n",
     "        'orig': {\n",
     "            1: {'path': f'{ILIEV_7_DIR}/Licorice1.bin', },\n",
     "            3: {'path': f'{ILIEV_7_DIR}/Licorice2.bin', },\n",
@@ -132,11 +140,27 @@
     "    },\n",
     "}\n",
     "\n",
+    "Rhyme = {\n",
+    "    1: {'path': f'{RHYME_OUTPUT_DIR}/iliev-7-00170.chombo.h5', },\n",
+    "    3: {'path': f'{RHYME_OUTPUT_DIR}/iliev-7-00360.chombo.h5', },\n",
+    "#     10: {'path': f'{RHYME_OUTPUT_DIR}/iliev-7-00590.chombo.h5', },\n",
+    "    10: {'path': f'{RHYME_OUTPUT_DIR}/iliev-7-000517.chombo.h5', },\n",
+    "    25: {'path': f'{RHYME_OUTPUT_DIR}/iliev-7-00820.chombo.h5', },\n",
+    "    75: {'path': f'{RHYME_OUTPUT_DIR}/iliev-7-01910.chombo.h5', },\n",
+    "}\n",
+    "\n",
     "# Check if files exist\n",
     "for sim_name, sim in BINARIES.items():\n",
-    "    for snap in list(sim['orig'].values()) + list(sim['add'].values()):\n",
+    "    def check_if_exist(path):\n",
     "        if not Path(snap['path']).is_file():\n",
-    "            print(f\"Not found: {snap['path']}\")"
+    "            print(f\"Not found: {snap['path']}\")\n",
+    "            \n",
+    "    for snap in sim['orig'].values():\n",
+    "        check_if_exist(snap['path'])\n",
+    "    for snap in sim['add'].values():\n",
+    "        check_if_exist(snap['path'])\n",
+    "    for snap in Rhyme.values():\n",
+    "        check_if_exist(snap['path'])"
    ]
   },
   {
@@ -146,6 +170,7 @@
    "outputs": [],
    "source": [
     "def reading_binary_files():\n",
+    "    Gamma = 5. / 3.\n",
     "    result = {}\n",
     "    \n",
     "    for simname, sim in BINARIES.items():\n",
@@ -180,6 +205,41 @@
     "            result[snap_time][simname]['nHII'] = f.read_reals(np.float32).reshape(domain)\n",
     "            \n",
     "            f.close()\n",
+    "            \n",
+    "    for snap_time, snap in Rhyme.items():\n",
+    "        if snap_time not in result:\n",
+    "            result[snap_time] = {}\n",
+    "\n",
+    "        if 'Rhyme' not in result[snap_time]:\n",
+    "            result[snap_time]['Rhyme'] = {}\n",
+    "            \n",
+    "        r = PyRhyme(snap['path'])\n",
+    "        domain = r.dataset.problem_domain\n",
+    "        \n",
+    "        v = r.load_variables(silent=True)\n",
+    "        \n",
+    "        rho = v['rho'][0].reshape(domain) * (1 * v['rho'][1]).to(U.cm**-3).value\n",
+    "        vx = v['rho_u'][0].reshape(domain) / rho * (1 * U.Mpc / U.Myr).to(U.cm / U.s).value\n",
+    "        vy = v['rho_v'][0].reshape(domain) / rho * (1 * U.Mpc / U.Myr).to(U.cm / U.s).value\n",
+    "        vz = v['rho_w'][0].reshape(domain) / rho * (1 * U.Mpc / U.Myr).to(U.cm / U.s).value\n",
+    "        T_orig = v['temp'][0].reshape(domain)\n",
+    "        fHI = v['ntr_frac_0'][0].reshape(domain)\n",
+    "        p, _, T = r.calc_temperature(v, X=1.0, Y=0.0, Gamma=5./3.)\n",
+    "        T = T[0].reshape(domain)\n",
+    "        p = p.reshape(domain)\n",
+    "        p *= C.m_p.to(U.g).value * (1 * r.dataset.active['h5']['attrs']['pressure_unit']).to(U.cm**-3 * U.cm**2 / U.s**2).value\n",
+    "        \n",
+    "        M = np.sqrt(vx**2 + vy**2 + vz**2) / np.sqrt(Gamma * p / (C.m_p.to(U.g).value * rho))\n",
+    "        \n",
+    "        result[snap_time]['Rhyme']['n'] = rho\n",
+    "        result[snap_time]['Rhyme']['nHI'] = fHI\n",
+    "        result[snap_time]['Rhyme']['nHII'] = 1.0 - fHI\n",
+    "        result[snap_time]['Rhyme']['T'] = T_orig\n",
+    "        result[snap_time]['Rhyme']['p'] = p\n",
+    "        result[snap_time]['Rhyme']['M'] = M\n",
+    "        \n",
+    "        r.dataset.close_current()\n",
+    "        r.dataset.clean_all()\n",
     "    \n",
     "    return result\n",
     "            \n",
@@ -204,6 +264,9 @@
     "        fig = go.Figure()\n",
     "        \n",
     "        for sn, sim in DATA[t].items():\n",
+    "            if sn == 'Rhyme':\n",
+    "                continue\n",
+    "\n",
     "            shape = sim[attr].shape\n",
     "            \n",
     "            if sn == 'ZEUS-MP':\n",
@@ -212,8 +275,15 @@
     "                y = sim[attr][int(shape[0]/2), int(shape[1]/2), :]\n",
     "            \n",
     "            fig.add_trace(go.Scatter(\n",
-    "                y=y, name=sn\n",
+    "                y=y, name=sn,\n",
+    "                mode='lines', line=dict(width=1),\n",
     "            ))\n",
+    "            \n",
+    "        shape = DATA[t]['Rhyme'][attr].shape\n",
+    "        fig.add_trace(go.Scatter(\n",
+    "            y=DATA[t]['Rhyme'][attr][int(shape[0]/2), int(shape[1]/2), :], name='Rhyme',\n",
+    "            mode='lines', line=dict(color='black', width=2.5),\n",
+    "        ))\n",
     "        \n",
     "        fig.update_layout(\n",
     "            title=f't = {t} Myr',\n",
@@ -223,7 +293,7 @@
     "            yaxis=dict(mirror=True, type='log', title=attr_title, exponentformat='power',),\n",
     "            legend=dict(\n",
     "                xanchor='left', yanchor='top', x=0.04, y=0.99\n",
-    "            ),\n",
+    "            ), showlegend=False,\n",
     "        )\n",
     "        \n",
     "        fig.show()\n",
@@ -248,13 +318,17 @@
    "source": [
     "def surface_plot(attr='nHI', attr_title='X<sub>HI</sub>', colorscale='Spectral'):\n",
     "    width = 1000\n",
-    "    height = 600\n",
+    "    height = 425\n",
     "    \n",
     "    for t in DATA.keys():\n",
     "        fig = make_subplots(\n",
-    "            2, 3,\n",
-    "            column_widths=[1, 1, 1], row_heights=[1, 1],\n",
-    "            vertical_spacing=0.025, horizontal_spacing=0.025,\n",
+    "            2, 4,\n",
+    "            column_widths=[2, 1, 1, 1], row_heights=[1, 1],\n",
+    "            specs=[\n",
+    "                [{\"type\": \"heatmap\", \"rowspan\": 2}, {\"type\": \"heatmap\"}, {\"type\": \"heatmap\"}, {\"type\": \"heatmap\"}],\n",
+    "                [            None                 , {\"type\": \"heatmap\"}, {\"type\": \"heatmap\"}, {\"type\": \"heatmap\"}]\n",
+    "            ],\n",
+    "            vertical_spacing=0.05, horizontal_spacing=0.025,\n",
     "            shared_xaxes=True, shared_yaxes=True,\n",
     "            x_title='x [px]', y_title='y [px]',\n",
     "        )\n",
@@ -263,9 +337,24 @@
     "        zmax = np.nanmax([np.nanmax(x[attr]) for x in DATA[t].values()])\n",
     "        \n",
     "        for ip, (sn, sim) in enumerate(DATA[t].items()):\n",
-    "            irow = int(ip / 3) + 1\n",
-    "            icol = int(ip % 3) + 1\n",
-    "            \n",
+    "            if sn == 'Rhyme':\n",
+    "                irow, icol = 1, 1\n",
+    "            elif sn == 'CAPREOLE+C2-RAY':\n",
+    "                irow, icol = 1, 2\n",
+    "            elif sn == 'RSPH':\n",
+    "                irow, icol = 1, 3\n",
+    "            elif sn == 'ZEUS-MP':\n",
+    "                irow, icol = 1, 4\n",
+    "            elif sn == 'LICORICE':\n",
+    "                irow, icol = 2, 2\n",
+    "            elif sn == 'FLASH-HC':\n",
+    "                irow, icol = 2, 3\n",
+    "            elif sn == 'CORAL':\n",
+    "                irow, icol = 2, 4\n",
+    "            else:\n",
+    "                print('Unknown sim!')\n",
+    "                continue\n",
+    "                \n",
     "            shape = sim[attr].shape\n",
     "            \n",
     "            if sn == 'ZEUS-MP':\n",
@@ -277,23 +366,29 @@
     "                z=np.log10(z),\n",
     "                zauto=False, zmin=np.log10(zmin), zmax=np.log10(zmax),\n",
     "                colorbar=dict(\n",
-    "                    title=attr_title,\n",
+    "                    title=attr_title, titleside='bottom', titlefont=dict(size=18),\n",
+    "                    thicknessmode='pixels', thickness=10, tickfont=dict(size=18),\n",
     "                ),\n",
     "                colorscale=colorscale, reversescale=True, showscale=True if ip == 0 else False,\n",
     "            ), irow, icol)\n",
     "            \n",
+    "            if sn != 'Rhyme':\n",
+    "                fig.update_yaxes(showticklabels=False, row=irow, col=icol)\n",
+    "            \n",
     "        fig.update_xaxes(\n",
     "            mirror=True,\n",
+    "            tickmode='array', tickvals=[0, 64, 127], ticktext=['0', '3.3', '6.6'],\n",
     "        )\n",
     "        \n",
     "        fig.update_yaxes(\n",
     "            mirror=True,\n",
+    "            tickmode='array', tickvals=[0, 64, 127], ticktext=['0', '3.3', '6.6'],\n",
     "        )\n",
     "        \n",
     "        fig.update_layout(\n",
     "            title=f't = {t} Myr',\n",
     "            width=width, height=height,\n",
-    "            margin=dict(l=10,r=10,b=10,t=50),\n",
+    "            margin=dict(l=60,r=10,b=60,t=50),\n",
     "            legend=dict(\n",
     "                xanchor='left', yanchor='top', x=0.04, y=0.99\n",
     "            ),\n",
@@ -303,7 +398,7 @@
     "        \n",
     "    \n",
     "if __name__ == '__main__' and '__file__' not in globals():\n",
-    "    surface_plot(attr='n', attr_title='log(<i>n</i> [cm<sup>-3</sup>])')\n",
+    "    surface_plot(attr='n', attr_title='log <i>n</i>')\n",
     "    surface_plot(attr='p', attr_title='log(<i>p</i>)')\n",
     "    surface_plot(attr='T', attr_title='log(<i>T</i> [K])')\n",
     "    surface_plot(attr='nHI', attr_title='log(X<sub>HI</sub>)')\n",
