[wip] iliev-7 -- added a parameter file

--- a/tests/Iliev-7/Iliev-7.ipynb
+++ b/tests/Iliev-7/Iliev-7.ipynb
@@ -38,8 +38,11 @@
    "source": [
     "# run wget http://musewiki.aip.de/local--files/dastools:sourcedet/CubEx-1.8_20180904.tar.gz --no-check-certificate\n",
     "\n",
-    "RHYME_OUTPUT_DIR = './output.old'\n",
+    "RHYME_OUTPUT_DIR = './output'\n",
     "ILIEV_7_DIR = 'astronomy.sussex.ac.uk/~iti20/RT_comparison_project/RT_workshop_data/T7_results'\n",
+    "\n",
+    "IMAGE_DIR = './images'\n",
+    "Path(IMAGE_DIR).mkdir(parents=True, exist_ok=True)\n",
     "\n",
     "BINARIES = {\n",
     "    'CAPREOLE+C2-RAY': {\n",
@@ -141,12 +144,11 @@
     "}\n",
     "\n",
     "Rhyme = {\n",
-    "    1: {'path': f'{RHYME_OUTPUT_DIR}/iliev-7-00170.chombo.h5', },\n",
-    "    3: {'path': f'{RHYME_OUTPUT_DIR}/iliev-7-00360.chombo.h5', },\n",
-    "#     10: {'path': f'{RHYME_OUTPUT_DIR}/iliev-7-00590.chombo.h5', },\n",
-    "    10: {'path': f'{RHYME_OUTPUT_DIR}/iliev-7-000517.chombo.h5', },\n",
-    "    25: {'path': f'{RHYME_OUTPUT_DIR}/iliev-7-00820.chombo.h5', },\n",
-    "    75: {'path': f'{RHYME_OUTPUT_DIR}/iliev-7-01910.chombo.h5', },\n",
+    "    1: {'path': f'{RHYME_OUTPUT_DIR}/iliev-7-000001.chombo.h5', },\n",
+    "    3: {'path': f'{RHYME_OUTPUT_DIR}/iliev-7-000003.chombo.h5', },\n",
+    "    10: {'path': f'{RHYME_OUTPUT_DIR}/iliev-7-000010.chombo.h5', },\n",
+    "    25: {'path': f'{RHYME_OUTPUT_DIR}/iliev-7-000025.chombo.h5', },\n",
+    "    75: {'path': f'{RHYME_OUTPUT_DIR}/iliev-7-000075.chombo.h5', },\n",
     "}\n",
     "\n",
     "# Check if files exist\n",
@@ -252,7 +254,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -286,9 +288,9 @@
     "        ))\n",
     "        \n",
     "        fig.update_layout(\n",
-    "            title=f't = {t} Myr',\n",
-    "            width=500, height=500,\n",
-    "            margin=dict(l=10,r=10,b=10,t=50),\n",
+    "            # title=f't = {t} Myr',\n",
+    "            width=width, height=height,\n",
+    "            margin=dict(l=10,r=10,b=10,t=10),\n",
     "            xaxis=dict(mirror=True, type='linear', title='x [px]', exponentformat='power',),\n",
     "            yaxis=dict(mirror=True, type='log', title=attr_title, exponentformat='power',),\n",
     "            legend=dict(\n",
@@ -296,16 +298,18 @@
     "            ), showlegend=False,\n",
     "        )\n",
     "        \n",
+    "        fig.write_image(f'{IMAGE_DIR}/{attr}-{t}.png', width=width, height=height, scale=3)\n",
+    "        fig.write_image(f'{IMAGE_DIR}/{attr}-{t}.svg', width=width, height=height)\n",
     "        fig.show()\n",
     "        \n",
     "    \n",
     "if __name__ == '__main__' and '__file__' not in globals():\n",
     "    line_plot(attr='n', attr_title='<i>n</i> [cm<sup>-3</sup>]')\n",
-    "    line_plot(attr='p', attr_title='<i>p</i>')\n",
+    "    line_plot(attr='p', attr_title='<i>p</i> [cgs]')\n",
     "    line_plot(attr='T', attr_title='<i>T</i> [K]')\n",
-    "    line_plot(attr='nHI', attr_title='X<sub>HI</sub>')\n",
-    "    line_plot(attr='nHII', attr_title='X<sub>HII</sub>')\n",
-    "    line_plot(attr='M', attr_title='<i>M</i>')"
+    "    line_plot(attr='nHI', attr_title='f<sub>HI</sub>')\n",
+    "    line_plot(attr='nHII', attr_title='f<sub>HII</sub>')\n",
+    "    line_plot(attr='M', attr_title='<i>M</i> = |<i>v</i>| / <i>c</i><sub>s</sub>')"
    ]
   },
   {
@@ -318,7 +322,7 @@
    "source": [
     "def surface_plot(attr='nHI', attr_title='X<sub>HI</sub>', colorscale='Spectral'):\n",
     "    width = 1000\n",
-    "    height = 425\n",
+    "    height = 380\n",
     "    \n",
     "    for t in DATA.keys():\n",
     "        fig = make_subplots(\n",
@@ -374,6 +378,36 @@
     "            \n",
     "            if sn != 'Rhyme':\n",
     "                fig.update_yaxes(showticklabels=False, row=irow, col=icol)\n",
+    "                \n",
+    "        annot_color = 'black' if attr in ['p', 'M'] else 'white'\n",
+    "        fig.add_annotation(\n",
+    "            xref='x1', yref='y1', xanchor='left', yanchor='bottom', x=5, y=3, text='Rhyme',\n",
+    "            showarrow=False, font=dict(color=annot_color, size=20),\n",
+    "        )\n",
+    "        fig.add_annotation(\n",
+    "            xref='x2', yref='y2', xanchor='left', yanchor='bottom', x=5, y=3, text='CAPREOLE+C2-RAY',\n",
+    "            showarrow=False, font=dict(color=annot_color, size=15),\n",
+    "        )\n",
+    "        fig.add_annotation(\n",
+    "            xref='x3', yref='y3', xanchor='left', yanchor='bottom', x=5, y=3, text='RSPH',\n",
+    "            showarrow=False, font=dict(color=annot_color, size=15),\n",
+    "        )\n",
+    "        fig.add_annotation(\n",
+    "            xref='x4', yref='y4', xanchor='left', yanchor='bottom', x=5, y=3, text='ZEUS-MP',\n",
+    "            showarrow=False, font=dict(color=annot_color, size=15),\n",
+    "        )\n",
+    "        fig.add_annotation(\n",
+    "            xref='x5', yref='y5', xanchor='left', yanchor='bottom', x=5, y=3, text='LICORICE',\n",
+    "            showarrow=False, font=dict(color=annot_color, size=15),\n",
+    "        )\n",
+    "        fig.add_annotation(\n",
+    "            xref='x6', yref='y6', xanchor='left', yanchor='bottom', x=5, y=3, text='FLASH-HC',\n",
+    "            showarrow=False, font=dict(color=annot_color, size=15),\n",
+    "        )\n",
+    "        fig.add_annotation(\n",
+    "            xref='x7', yref='y7', xanchor='left', yanchor='bottom', x=5, y=3, text='CORAL',\n",
+    "            showarrow=False, font=dict(color=annot_color, size=15),\n",
+    "        )\n",
     "            \n",
     "        fig.update_xaxes(\n",
     "            mirror=True,\n",
@@ -386,24 +420,26 @@
     "        )\n",
     "        \n",
     "        fig.update_layout(\n",
-    "            title=f't = {t} Myr',\n",
+    "            # title=f't = {t} Myr',\n",
     "            width=width, height=height,\n",
-    "            margin=dict(l=60,r=10,b=60,t=50),\n",
+    "            margin=dict(l=60,r=10,b=60,t=10),\n",
     "            legend=dict(\n",
     "                xanchor='left', yanchor='top', x=0.04, y=0.99\n",
     "            ),\n",
     "        )\n",
     "        \n",
+    "        fig.write_image(f'{IMAGE_DIR}/heatmap-{attr}-{t}.png', width=width, height=height, scale=3)\n",
+    "        fig.write_image(f'{IMAGE_DIR}/heatmap-{attr}-{t}.svg', width=width, height=height)\n",
     "        fig.show()\n",
     "        \n",
     "    \n",
     "if __name__ == '__main__' and '__file__' not in globals():\n",
     "    surface_plot(attr='n', attr_title='log <i>n</i>')\n",
-    "    surface_plot(attr='p', attr_title='log(<i>p</i>)')\n",
-    "    surface_plot(attr='T', attr_title='log(<i>T</i> [K])')\n",
-    "    surface_plot(attr='nHI', attr_title='log(X<sub>HI</sub>)')\n",
-    "    surface_plot(attr='nHII', attr_title='log(X<sub>HII</sub>)')\n",
-    "    surface_plot(attr='M', attr_title='log(<i>M</i>)')"
+    "    surface_plot(attr='p', attr_title='log <i>p</i>')\n",
+    "    surface_plot(attr='T', attr_title='log <i>T</i>')\n",
+    "    surface_plot(attr='nHI', attr_title='log X<sub>HI</sub>')\n",
+    "    surface_plot(attr='nHII', attr_title='log X<sub>HII</sub>')\n",
+    "    surface_plot(attr='M', attr_title='log <i>M</i>')"
    ]
   }
  ],
